# egovframe-guardian

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
assets/: egovframe-hook-rules.md
config/: egovframe-guardian.json
docs/: development.md  privacy.md  terms.md
hooks/: hooks.json
scripts/: egovframe_distribution.py  egovframe_distribution_core.py  egovframe_guard.py  egovframe_guard_context.py  egovframe_guard_core.py  egovframe_guard_hooks.py  egovframe_guard_state.py  egovframe_guard_zip.py  score_maturity.py  validate_release_package.py
skills/egovframe-developer/: SKILL.md
skills/egovframe-developer/agents/: openai.yaml
skills/egovframe-developer/assets/examples/batch-job/: NoticeArchiveJobConfig.java  NoticeArchiveMapper.java  NoticeArchiveTasklet.java  notice-archive-job.xml
skills/egovframe-developer/references/: coverage-protocol.md  development-playbook.md  distribution-file-playbook.md  example-code-catalog.md  github-clone-manifest.json  loop-engineering.md  portal-manual-map.md  portal-zip-inventory.md  repository-directory-atlas.md  repository-directory-index.json  source-refresh.md
skills/egovframe-developer/scripts/: audit_coverage.py
tests/: test_codex_e2e.py  test_distribution.py  test_guard.py  test_hook_lifecycle.py  test_hook_state.py  test_release_package.py  test_sample_matrix.py
(+34 files in other folders)
